1999-05-12  Katsumi Yamaoka   <yamaoka@jpl.org>

	* WEMI: Version 1.13.4 (Nishi-Yaizu) released.

1999-04-06  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* mime-edit.el (mime-delete-field): Use `std11-field-end'.

1999-03-30  Keiichi Suzuki  <kei-suzu@mail.wbs.ne.jp>

	* mime-edit.el (mime-edit-decode-single-part-in-buffer): Normalize
	EOL code in MIME encoded text part.

1999-03-27  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-view.el (mime-preview-follow-current-entity): Don't copy
	header if current entity is root.

1999-03-11  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-edit.el (mime-charset-type-list): Add `tis-620'.


1999-02-28  Katsumi Yamaoka   <yamaoka@jpl.org>

	* WEMI: Version 1.13.3 (Yaizu) released.

1999-02-26  Katsumi Yamaoka   <yamaoka@jpl.org>

	* SEMI-MK (install-semi-package): Install mime-setup.el(c).
	(compile-semi-package): Compile mime-setup.el as well.

1999-02-08  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-edit.el (mime-content-types): Add definition of
	application/vnd.ms-powerpoint for myself :-P
	(mime-file-types): Add setting of *.ppt for
	application/vnd.ms-powerpoint.

1999-02-08  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-partial.el
	(mime-combine-message/partial-pieces-automatically): Call
	`mime-store-message/partial-piece' in the buffer when it is
	called.

	* mime-play.el (mime-store-message/partial-piece): Don't move to
	point-min.

	* mime-play.el (mime-store-message/partial-piece): Don't expect
	called in raw-buffer.


1999-01-27  Katsumi Yamaoka   <yamaoka@jpl.org>

	* WEMI: Version 1.13.2 (Mochimune) released.

1999-01-26  Katsumi Yamaoka   <yamaoka@jpl.org>

	* README.en: Notice that 1.12.5 or later of FLIM is required.

1999-01-26  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-play.el (mime-preview-play-current-entity): Add autoload
	cookie.
	(mime-play-entity): Likewise.

	* mime-view.el (mime-display-message): Add autoload cookie; add
	DOC-string.
	(mime-view-buffer): Add autoload cookie.
